# AlgLang

./: .gitignore  CMakeLists.txt  langspec.md  readme.md
alg_dialect/: CMakeLists.txt
alg_dialect/include/: CMakeLists.txt
alg_dialect/include/Alg/: AlgDialect.h  AlgOps.h  AlgTypes.h  CMakeLists.txt  Ops.td
alg_dialect/lib/Alg/: AlgDialect.cpp  AlgOps.cpp  AlgTypes.cpp  CMakeLists.txt
examples/: abelian_gp.alg  abelian_gp_group_resolution.alg  abelian_gp_with_constraints.alg
frontend/: CMakeLists.txt  main.cpp
frontend/include/ast/: ast.h
frontend/include/ast/passes/: group_resolution_pass.h  pass.h
frontend/include/driver/: driver.h
frontend/include/lexer/: ast.h  parser.h
frontend/include/lower/: lower.h
frontend/include/mlirgen/: constraints.h  mlirgen.h
frontend/include/parser/: parser.h
frontend/include/passes/constraint_resolution/: constraint_resolution.h  constraints.h
frontend/lib/: CMakeLists.txt
frontend/lib/ast/: CMakeLists.txt  ast.cpp
frontend/lib/ast/passes/: group_resolution_pass.cpp
frontend/lib/driver/: CMakeLists.txt  driver.cpp
frontend/lib/lexer/: CMakeLists.txt  ast.cpp  parser.cpp
frontend/lib/lower/: CMakeLists.txt  lower.cpp
frontend/lib/mlirgen/: CMakeLists.txt  mlirgen.cpp
frontend/lib/parser/: CMakeLists.txt  parser.cpp
frontend/lib/passes/: CMakeLists.txt
frontend/lib/passes/constraint_resolution/: CMakeLists.txt  constraint_resolution.cpp  constraints.cpp
